# aerleon

./: .all-contributorsrc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .roomodes  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  aclcheck_cmdline.py  aerleon.yml  codecov.yml  extensions.json  make_dist.sh  mkdocs.yml  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  setup.py  tasks.py  test-requirements.txt  test.ipt
.devcontainer/: devcontainer.json
.github/actions/setup/: action.yml
.github/workflows/: CODE_OF_CONDUCT.md  docker.yml  main.yml  release.yml  release_dry_run.yml  validate.yml  windows.yml
aerleon/: TODO.txt  __init__.py  __main__.py  aclcheck_cmdline.py  aclgen.py  aclsearch.py  api.py
aerleon/_vendor/ply/: LICENSE  lex.py
aerleon/lib/: __init__.py  aclcheck.py  aclgenerator.py  addressbook.py  arista.py  arista_tp.py  aruba.py  brocade.py  cisco.py  ciscoasa.py  cisconx.py  ciscoxr.py  cloudarmor.py  demo.py  export.py  fortigate.py  fqdn.py  frontend.py  gce.py  gcp.py  gcp_hf.py  ipset.py  iptables.py  juniper.py  juniperevo.py  junipermsmpc.py  junipersrx.py  k8s.py  logging.py  models.py  nacaddr.py  naming.py  nftables.py  nokiasrl.py  nokiasros.py  nsxt.py  nsxv.py  nvueapi.py  openconfig.py  packetfilter.py  (+21 more)
aerleon/plugins/: cisco.py
aerleon/plugins/cisco/: README.md  cisco.py  pyproject.toml
aerleon/utils/: config.py  iputils.py  options.py  source_map.py
benchmarks/: demo_benchmark.py
capirca/: aclgen.py
capirca/lib/: policy.py
def/: naming.yaml
doc/generators/: cisco.md  cisconx.md  junipermsmpc.md
doc/wiki/: Yaml-files.md
docs/: aclcheck.md  aclcheck_api.md  api.md  contributing.md  development_setup.md  faq.md  getting_started.md  index.md  install.md  links.md  requirements.txt
docs/admin/: install.md
docs/admin/release_notes/: version_1.0.md
docs/assets/: extra.css
docs/css/: extra.css
docs/dev/: arch_decision.md  contributing.md  dev_environment.md  extending.md
docs/dev/code_reference/: core.md  generators.md  index.md
docs/dev/design/: aclcheck.md  aerleon-design.md  policy-reader.md
docs/reference/: cli.md  generator_patterns.md  generators.md  naming.md  yaml_reference.md
docs/user/: faq.md  icmp_types.md  install.md  lib_address.md  lib_getting_started.md  lib_overview.md  lib_platforms.md  lib_policy.md  lib_service.md  links.md  uninstall.md  upgrade.md
docs/user/generators/: arista.md  arista_tp.md  aruba.md  brocade.md  cisco.md  ciscoasa.md  cisconx.md  ciscoxr.md  common.md  gce.md  ipset.md  iptables.md  juniper.md  juniperevo.md  junipermsmpc.md  junipersrx.md  k8s.md  nftables.md  nsxv.md  packetfilter.md  paloaltofw.md  pcap.md  speedway.md  srxlo.md  windows_advfirewall.md  windows_ipsec.md
docs/user/release_notes/: version_1.0.md
policies/includes/: arista_terms_include.yaml  untrusted-networks-blocking.pol-include.yaml  untrusted-networks-blocking.yaml
policies/pol/: sample_arista_tp.pol  sample_arista_tp_yaml.pol.yaml  sample_arista_tp_yaml.yaml  sample_cisco_lab_yaml.pol.yaml  sample_cisco_lab_yaml.yaml  sample_cloudarmor.pol  sample_fortigate.yaml  sample_gce.pol  sample_inet6_gce.pol  sample_ipset_yaml.pol.yaml  sample_ipset_yaml.yaml  sample_k8s.pol  sample_k8s_yaml.yaml  sample_mixed_gce.pol  sample_multitarget.pol  sample_nftables.pol  sample_nokia_srl_lab.pol  sample_paloalto_yaml.pol.yaml  sample_proxmox.yaml  sample_srx_yaml.yaml  sample_test.yaml
repro/: Dockerfile  README.md  repro_blocking_io.py  repro_blocking_io_aggressive.py  repro_blocking_io_final.py  repro_blocking_io_fork.py  repro_blocking_io_minimal.py  repro_blocking_io_sweep.py  repro_blocking_io_targeted.py  repro_errno11.py  repro_final.py
repro_tests/BlockingIOError/: Dockerfile  README.md  repro_errno11.py
repro_tests/BlockingIOErrorFlask/: Dockerfile  README.md  repro_flask_dev.py
schemas/: aerleon-config.schema.json  aerleon-definition-yaml.schema.json  aerleon-definitions.schema.json  aerleon-policies.schema.json  aerleon-policy-yaml.schema.json
tests/api/: ApiTest.testDocsExample.stdout.ref  api_test.py
tests/integration/: aclgen_test.py
tests/lib/: AclCheckTest.testSummarize.stdout.ref  AclCheckTest.testSummarizeWithTypes.stdout.ref  PolicyBuilderTest.testPolicyBuilderBuiltins.stdout.ref  PolicyBuilderTest.testPolicyBuilderUnexpected.stdout.ref  TermTest.testPolicy.stdout.ref  TermTest.testPolicyNoSectionId.stdout.ref  aclcheck_test.py  aclgenerator_test.py  addressbook_test.py  arista_test.py  arista_tp_test.py  aruba_test.py  brocade_test.py  builtins_test.py  cisco_test.py  ciscoasa_test.py  cisconx_test.py  ciscoxr_test.py  cloudarmor_test.py  fqdn_test.py  gce_test.py  gcp_hf_test.py  ipset_test.py  iptables_test.py  juniper_test.py  juniperevo_test.py  junipermsmpc_test.py  junipersrx_test.py  k8s_test.py  logging_test.py  nacaddr_test.py  naming_test.py  nftables_test.py  nsxt_test.py  nsxv_funct_test.py  nsxv_functtest.py  nsxv_mocktest.py  nsxv_test.py  nsxv_unit_test.py  nsxv_unittest.py  (+16 more)
tests/regression/: test_terms.py
tests/regression/arista/: AristaTest.testAHAndESPAreIntegers.stdout.ref  AristaTest.testAHIsAnInteger.stdout.ref  AristaTest.testBuildWarningTokens.stdout.ref  AristaTest.testESPIsAnInteger.stdout.ref  AristaTest.testExtendedEosSyntax.stdout.ref  AristaTest.testRemark.stdout.ref  AristaTest.testSIPUsesInt.stdout.ref  AristaTest.testStandardTermHost.stdout.ref  AristaTest.testStandardTermHostV6.stdout.ref  AristaTest.testStandardTermV4.stdout.ref  (+1 more)
tests/regression_utils/: TestReferenceCaptureDecorators.testFileCapture.example_file1.ref  TestReferenceCaptureDecorators.testFileCapture.example_file2.ref  TestReferenceCaptureDecorators.testStdout.stdout.ref  TestReferenceCaptureDecorators.testStdoutAndStderr.stderr.ref  TestReferenceCaptureDecorators.testStdoutAndStderr.stdout.ref  capture.py  capture_test.py
tests/unit/: test_basics.py  wrapwords_test.py
tests/utils/: config_test.py  iputils_test.py  source_map_test.py
tools/: cgrep.py  iputilstools.py  pol2yaml.py
(+784 files in other folders)
