[tool.poetry]
name = "aerleon"
version = "1.11.0"
description = "A firewall generation tool"
authors = ["Rob Ankeny <ankenyr@gmail.com>", "Jason Benterou <jason.benterou@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/aerleon/aerleon"
repository = "https://github.com/aerleon/aerleon"
keywords = ["firewall", "networking", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: System :: Networking :: Firewalls"
]
include = [
    "LICENSE",
    "README.md",
    "tools",
]
packages = [{include = "aerleon"}, {include = "aerleon/lib"}, {include = "tools"}]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0.3"
ply = "^3.11"
absl-py = "^2.3.1"
typing_extensions = "^4.15.0"
importlib-metadata = { version = "^4.2", markers = "python_version <= '3.10'" }

[tool.poetry.group.dev.dependencies]
black = {version = "25.9.0"}
coverage = {version = "^7.10.6"}
flake8 = {version = "*"}
Flake8-pyproject = {version = "*"}
nox = {version = "^2025.05.01"}
nox-poetry = {version = "^1.2.0"}
pre-commit = {version = "^2.20.0"}
pytest = {version = "^8.4.2"}
pyperf = {version = "^2.6.3"}
psutil = {version = "^7.1.0"}
mkdocstrings-python = "^1.16.12"
mkdocstrings = "^0.29.1"
mkdocs-version-annotations = "^1.0.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.20"
sigstore = "^1.0.0"
isort = "^6.1.0"

[tool.poetry.scripts]
aclgen = "aerleon.aclgen:EntryPoint"
cgrep = "tools.cgrep:EntryPoint"
aclcheck = "aerleon.aclcheck_cmdline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# extend-exclude = "/__pycache__|\.ref/"
line-length = 99
skip-string-normalization = true
target-version = [
    'py39',
    'py310',
    'py311',
    'py312',
    'py313',
    'py314',
]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''

[tool.isort]
profile = "black"

[tool.flake8]
max-complexity = 10
max-line-length = 99
extend-ignore = ['E203', 'C901']
exclude = ['.git','.github','venv','site-packages','__pycache__','doc','build','dist','policies']

[tool.coverage.run]
branch = true
command_line = '-m pytest'
