[project]
name = "aerleon"
description = "A firewall generation tool"
license = "Apache-2.0"
keywords = ["firewall", "networking", "security"]
version = "1.14.0"
dynamic = ["classifiers"]
readme = "README.md"
authors = [{name = "Jason Benterou", email = "jason.benterou@gmail.com"}, {name = "Rob Ankeny", email = "ankenyr@gmail.com"}]
requires-python = '>=3.10,<4.0'
dependencies = [
    'PyYAML (>=6.0.3,<7.0.0)',
    'absl-py (>=2.3.1,<3.0.0)',
    'typing_extensions (>=4.15.0,<5.0.0)',
    'importlib-metadata (>=4.2,<5.0) ; python_version <= "3.10"'
]

[project.urls]
homepage = "https://github.com/aerleon/aerleon"
repository = "https://github.com/aerleon/aerleon"

[project.scripts]
aclgen = "aerleon.aclgen:EntryPoint"
cgrep = "tools.cgrep:EntryPoint"
aclcheck = "aerleon.aclcheck_cmdline:main"

[tool.poetry]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: System :: Networking :: Firewalls"
]
include = [
    "LICENSE",
    "README.md",
    "tools",
]
packages = [{include = "aerleon"}, {include = "aerleon/lib"}, {include = "tools"}]
requires-poetry = '>=2.2,<3.0'

[dependency-groups]
test = [
    "coverage>=7.10.6",
    "psutil>=7.1.0",
    "pyperf>=2.7.0",
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
]
lint = [
    "black==25.9.0",
    "flake8",
    "Flake8-pyproject",
    "isort>=6.1.0",
    "pre-commit>=2.20.0",
    "pyright>=1.1.407",
    "pyupgrade>=3.21.2",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "mkdocs-version-annotations>=1.0.0",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.12",
]
nox = [
    "nox>=2025.10.14",
    "nox-poetry>=1.2.0",
]
release = [
    "sigstore>=1.0.0",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "docs"},
    {include-group = "nox"},
    {include-group = "release"},
]

[build-system]
requires = ['poetry-core (>=2.0,<3.0)']
build-backend = "poetry.core.masonry.api"

[tool.black]
# extend-exclude = "/__pycache__|\.ref/"
line-length = 99
skip-string-normalization = true
target-version = [
    'py310',
    'py311',
    'py312',
    'py313',
    'py314',
]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.nox
    | _build
    | buck-out
    | build
    | dist
    | _vendor
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
skip = [
    '.bzr',
    '.direnv',
    '.eggs',
    '.git',
    '.hg',
    '.mypy_cache',
    '.nox',
    '.pants.d',
    '.svn',
    '.tox',
    '.venv',
    '__pypackages__',
    '_build',
    'buck-out',
    'build',
    'dist',
    'node_modules',
    'venv',
    '_vendor',
]

[tool.flake8]
max-complexity = 10
max-line-length = 99
extend-ignore = ['E203', 'C901']
exclude = ['.git','.github','venv','site-packages','__pycache__','doc','build','dist','policies','_vendor']

[tool.coverage.run]
branch = true
command_line = '-m pytest'

[tool.pyright]
include = ["aerleon", "tests"]
exclude = [
    "**/__pycache__",
    ".venv",
    "_vendor",
]

pythonVersion = "3.11"
typeCheckingMode = "basic"  # "off", "basic", "standard", "strict"

reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = "warning"
reportUnusedVariable = "warning"